propiedad flex-flow

--- a/index.html
+++ b/index.html
@@ -18,5 +18,35 @@
         <article class="items">Flex Item 2</article>
         <article class="items">Flex Item 3</article>
     </section>
+    <br><br><br><br><br>
+    <h2>Flex Direction</h2>
+    <section class="container-fdirection">
+        <article class="items">Flex Item 1</article>
+        <article class="items">Flex Item 2</article>
+        <article class="items">Flex Item 3</article>
+    </section>
+    <br><br><br><br><br>
+    <h2>Flex Wrap</h2>
+    <section class="container-fwrap">
+        <article class="items-fwrap">Flex Item 1</article>
+        <article class="items-fwrap">Flex Item 2</article>
+        <article class="items-fwrap">Flex Item 3</article>
+        <article class="items-fwrap">Flex Item 4</article>
+        <article class="items-fwrap">Flex Item 5</article>
+        <article class="items-fwrap">Flex Item 6</article>
+        <article class="items-fwrap">Flex Item 7</article>
+        <article class="items-fwrap">Flex Item 8</article>
+        <article class="items-fwrap">Flex Item 9</article>
+        <article class="items-fwrap">Flex Item 10</article>
+        <article class="items-fwrap">Flex Item 11</article>
+        <article class="items-fwrap">Flex Item 12</article>
+        <article class="items-fwrap">Flex Item 13</article>
+        <article class="items-fwrap">Flex Item 14</article>
+        <article class="items-fwrap">Flex Item 15</article>
+        <article class="items-fwrap">Flex Item 16</article>
+        <article class="items-fwrap">Flex Item 17</article>
+        <article class="items-fwrap">Flex Item 18</article>
+        <article class="items-fwrap">Flex Item 19</article>
+    </section>
 </body>
 </html>
