--- a/index.html
+++ b/index.html
@@ -211,6 +211,20 @@
         <article class="items-flex-shrink">Flex Item 3 diego armando montero sanchez</article>
     </section>
 
+    <!-- Orden y alineacion -->
+    <!-- Solo se veran un par de imagenes es muy basico para programarlo -->
+    <br><br><br><br><br>
+    <h2>Order Items</h2>
+    <div class="flex-regla">
+        <img src="images/order_flexbox.PNG"  alt="order_flexbox">
+    </div>
+    
+    <br><br><br><br><br>
+    <h2>Self Align</h2>
+    <div class="flex-regla">
+        <img src="images/align-self_flexbox.PNG" alt="aling_self">
+    </div>
+
     <script src="js/script.js"></script>
     <script src="js/crossAxis.js"></script>
     <script src="js/alignContent.js"></script>
